@@ -1,3 +1,5 @@
+21-Jan-2011 Issue #21. Module injections did not work for module collections.
+
 20-Jan-2011 Issue #18. The API for setting relative paths has been made more robust, but with the consequence that some file specifications have moved out of field initializers to class constructors.
 
 20-Jan-2011 Opus.Core.DependencyNodeEnumerator no longer throws an exception when the DependencyGraph is empty.
